--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div>
+    <div id="header">
         <nav id="navbar">
             <ul>
                 <li> <a href="#">About</a> </li>
@@ -28,8 +28,8 @@
     <!-- welcome -->
 
     <section id="welcome-section" class="welcome-section">
-        <h1>Hey I am Mimic</h1>
-        <p>a web developer</p>
+        <h1>Hey I am Maen</h1>
+        <p>I a ma Programmer.</p>
     </section>
 
     <!-- welcome-->
@@ -38,35 +38,78 @@
 
     <!-- Project section starts here-->
 
-    <section id="Project">
+    <section id="projects" class="projects-section">
+        <h2 class="projects-section-header">These are some of my projects</h2>
 
-        <div class="Project-title">
-            <h1> These are some of my projects</h1>
+
+
+
+        <div class="projects-grid">
+            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" target="_blank" class="project project-tile">
+                <img class="project-image" src="photo-1453728013993-6d66e9c9123a.jfif " alt="project" />
+                <p class="project-title">
+                    <span class="code">&lt;</span> Survey page
+                    <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+
+
+
+            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" target="_blank" class="project project-tile">
+                <img class="project-image" src="photo-1453728013993-6d66e9c9123a.jfif " alt="project" />
+                <p class="project-title">
+                    <span class="code">&lt;</span> Portofilio
+                    <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+
+            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" target="_blank" class="project project-tile">
+                <img class="project-image" src="photo-1453728013993-6d66e9c9123a.jfif " alt="project" />
+                <p class="project-title">
+                    <span class="code">&lt;</span> Survey page
+                    <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
 
         </div>
 
 
+
+
     </section>
+
+
 
     <!-- Project section ends  here-->
 
+
+
+
+
+
+
+
+
+
+    <!-- footer section -->
+
     <footer>
-        <h1>Let's work together...</h1>
 
-        <a href="https://github.com/Muhaked/Personal-Portfolio-Webpage.git" target="_blank">
-            <p>Github</p>
-        </a>
-
+        <p>
+            &copy; Github
+            <a href="https://github.com/Muhaked/Personal-Portfolio-Webpage.git" target="_blank">Github  Repository<i class="fab fa-free-code-camp"></i
+      ></a>
+        </p>
     </footer>
 
+    <!-- end footer section  -->
 
 
 
 
 
 
-
-    <script src="main.js"></script>
+    <script src="main.js "></script>
 </body>
 
 </html>
