--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Portfolio Webpage</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Portfolio Webpage </title>
 </head>
 
 <body>
-    <div id="header">
-        <nav id="navbar">
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
+    <!--
+
+    Hello Camper!
+
+    For now, the test suite only works in Chrome!
+    Please read the README below in the JS Editor before beginning.
+    Feel free to delete this message once you have read it.
+    Good luck and Happy Coding!
+
+    - The freeCodeCamp Team
+
+    -->
+    <header id="header">
+        <nav id="navbar" style="position: fixed; top: 0">
             <ul>
                 <li> <a href="#">About</a> </li>
                 <li><a href="#"> Work</a></li>
@@ -19,8 +31,11 @@
             </ul>
 
         </nav>
+    </header>
+    <!-- <div id="header">
 
-    </div>
+
+    </div> -->
 
 
 
@@ -97,8 +112,8 @@
 
         <p>
             &copy; Github
-            <a href="https://github.com/Muhaked/Personal-Portfolio-Webpage.git" target="_blank">Github  Repository<i class="fab fa-free-code-camp"></i
-      ></a>
+            <a id="profile-link" href="https://github.com/" target="_blank">Github  Repository<i class="fab fa-free-code-camp"></i
+    ></a>
         </p>
     </footer>
 
@@ -110,6 +125,8 @@
 
 
     <script src="main.js "></script>
+
+    <script src="js/index.js"></script>
 </body>
 
 </html>
